// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`1m3d 1`] = `
{
  "annotation": {},
  "chartType": "columnParallel",
  "config": {
    "columnParallel": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
      },
      "crosshairRect": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "rectColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "stackCornerRadius": [
        4,
        4,
        4,
        4,
      ],
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": false,
        },
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "labelAutoHide": true,
        "labelAutoHideGap": 4,
        "labelAutoLimit": true,
        "labelAutoLimitLength": 80,
        "labelAutoRotate": false,
        "labelAutoRotateAngleRange": [
          0,
          -45,
          -90,
        ],
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
      },
      "yAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": false,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "columnParallel": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
        },
        "crosshairRect": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "rectColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "stackCornerRadius": [
          4,
          4,
          4,
          4,
        ],
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": false,
          },
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "labelAutoHide": true,
          "labelAutoHideGap": 4,
          "labelAutoLimit": true,
          "labelAutoLimitLength": 80,
          "labelAutoRotate": false,
          "labelAutoRotateAngleRange": [
            0,
            -45,
            -90,
          ],
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
        },
        "yAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": false,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__DimGroupID__": "east-A-profit",
      "__DimGroup__": "east-A",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "city": "A",
        "date": "2019",
        "profit": 10,
        "region": "east",
      },
      "city": "A",
      "date": "2019",
      "profit": 10,
      "region": "east",
    },
    {
      "__DimGroupID__": "east-B-profit",
      "__DimGroup__": "east-B",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "city": "B",
        "date": "2019",
        "profit": 30,
        "region": "east",
      },
      "city": "B",
      "date": "2019",
      "profit": 30,
      "region": "east",
    },
    {
      "__DimGroupID__": "east-C-profit",
      "__DimGroup__": "east-C",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "city": "C",
        "date": "2019",
        "profit": 30,
        "region": "east",
      },
      "city": "C",
      "date": "2019",
      "profit": 30,
      "region": "east",
    },
    {
      "__DimGroupID__": "east-D-profit",
      "__DimGroup__": "east-D",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "city": "D",
        "date": "2019",
        "profit": 50,
        "region": "east",
      },
      "city": "D",
      "date": "2019",
      "profit": 50,
      "region": "east",
    },
    {
      "__DimGroupID__": "east-E-profit",
      "__DimGroup__": "east-E",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "city": "E",
        "date": "2019",
        "profit": 40,
        "region": "east",
      },
      "city": "E",
      "date": "2019",
      "profit": 40,
      "region": "east",
    },
    {
      "__DimGroupID__": "north of east-A-profit",
      "__DimGroup__": "north of east-A",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "city": "A",
        "date": "2020",
        "profit": 10,
        "region": "north of east",
      },
      "city": "A",
      "date": "2020",
      "profit": 10,
      "region": "north of east",
    },
    {
      "__DimGroupID__": "north of east-B-profit",
      "__DimGroup__": "north of east-B",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "city": "B",
        "date": "2020",
        "profit": 30,
        "region": "north of east",
      },
      "city": "B",
      "date": "2020",
      "profit": 30,
      "region": "north of east",
    },
    {
      "__DimGroupID__": "north of east-C-profit",
      "__DimGroup__": "north of east-C",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "city": "C",
        "date": "2020",
        "profit": 30,
        "region": "north of east",
      },
      "city": "C",
      "date": "2020",
      "profit": 30,
      "region": "north of east",
    },
    {
      "__DimGroupID__": "north of east-D-profit",
      "__DimGroup__": "north of east-D",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "city": "D",
        "date": "2020",
        "profit": 50,
        "region": "north of east",
      },
      "city": "D",
      "date": "2020",
      "profit": 50,
      "region": "north of east",
    },
    {
      "__DimGroupID__": "north of east-E-profit",
      "__DimGroup__": "north of east-E",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "city": "E",
        "date": "2020",
        "profit": 40,
        "region": "north of east",
      },
      "city": "E",
      "date": "2020",
      "profit": 40,
      "region": "north of east",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "profit": "profit",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
      },
      "id": "2D1M",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "east-A-profit": "east-A",
          "east-B-profit": "east-B",
          "east-C-profit": "east-C",
          "east-D-profit": "east-D",
          "east-E-profit": "east-E",
          "north of east-A-profit": "north of east-A",
          "north of east-B-profit": "north of east-B",
          "north of east-C-profit": "north of east-C",
          "north of east-D-profit": "north of east-D",
          "north of east-E-profit": "north of east-E",
        },
        "colorItems": [
          "east-A-profit",
          "east-B-profit",
          "east-C-profit",
          "east-D-profit",
          "east-E-profit",
          "north of east-A-profit",
          "north of east-B-profit",
          "north of east-C-profit",
          "north of east-D-profit",
          "north of east-E-profit",
        ],
        "groupId": "__DimGroupID__",
        "groupName": "__DimGroup__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "date",
      "id": "date",
      "location": "dimension",
    },
    {
      "alias": "region",
      "id": "region",
      "location": "dimension",
    },
    {
      "alias": "city",
      "id": "city",
      "location": "dimension",
    },
  ],
  "encoding": [
    {
      "color": [
        "__MeaName__",
      ],
      "group": [
        "__DimGroupID__",
      ],
      "x": [
        "date",
      ],
      "y": [
        "__MeaValue__",
      ],
    },
  ],
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "profit",
      "id": "profit",
    },
  ],
}
`;

exports[`1m3d 2`] = `
{
  "animation": true,
  "axes": [
    {
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": false,
      },
      "hover": true,
      "label": {
        "autoHide": true,
        "autoHideMethod": "greedy",
        "autoHideSeparation": 4,
        "autoLimit": true,
        "autoRotate": false,
        "autoRotateAngle": [
          0,
          -45,
          -90,
        ],
        "flush": true,
        "lastVisible": true,
        "minGap": 4,
        "space": 8,
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
          "maxLineWidth": 80,
        },
        "visible": true,
      },
      "maxHeight": 140,
      "orient": "bottom",
      "paddingInner": [
        0.15,
        0.1,
      ],
      "paddingOuter": [
        0.075,
        0.1,
      ],
      "sampling": false,
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "band",
      "visible": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": false,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "left",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "bar": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
      },
    },
    "style": {
      "lineWidth": 1,
    },
  },
  "color": {
    "domain": [
      "east-A-profit",
      "east-B-profit",
      "east-C-profit",
      "east-D-profit",
      "east-E-profit",
      "north of east-A-profit",
      "north of east-B-profit",
      "north of east-C-profit",
      "north of east-D-profit",
      "north of east-E-profit",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "crosshair": {
    "xField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "fill": "#3641594d",
          "lineWidth": 0,
          "opacity": 0.2,
        },
        "type": "rect",
      },
      "visible": true,
    },
  },
  "data": {
    "fields": {
      "__DimGroupID__": {
        "sortIndex": 0,
      },
      "date": {
        "sortIndex": 0,
      },
    },
    "id": "2D1M",
    "values": [
      {
        "__DimGroupID__": "east-A-profit",
        "__DimGroup__": "east-A",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "city": "A",
          "date": "2019",
          "profit": 10,
          "region": "east",
        },
        "city": "A",
        "date": "2019",
        "profit": 10,
        "region": "east",
      },
      {
        "__DimGroupID__": "east-B-profit",
        "__DimGroup__": "east-B",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "city": "B",
          "date": "2019",
          "profit": 30,
          "region": "east",
        },
        "city": "B",
        "date": "2019",
        "profit": 30,
        "region": "east",
      },
      {
        "__DimGroupID__": "east-C-profit",
        "__DimGroup__": "east-C",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "city": "C",
          "date": "2019",
          "profit": 30,
          "region": "east",
        },
        "city": "C",
        "date": "2019",
        "profit": 30,
        "region": "east",
      },
      {
        "__DimGroupID__": "east-D-profit",
        "__DimGroup__": "east-D",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "city": "D",
          "date": "2019",
          "profit": 50,
          "region": "east",
        },
        "city": "D",
        "date": "2019",
        "profit": 50,
        "region": "east",
      },
      {
        "__DimGroupID__": "east-E-profit",
        "__DimGroup__": "east-E",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "city": "E",
          "date": "2019",
          "profit": 40,
          "region": "east",
        },
        "city": "E",
        "date": "2019",
        "profit": 40,
        "region": "east",
      },
      {
        "__DimGroupID__": "north of east-A-profit",
        "__DimGroup__": "north of east-A",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "city": "A",
          "date": "2020",
          "profit": 10,
          "region": "north of east",
        },
        "city": "A",
        "date": "2020",
        "profit": 10,
        "region": "north of east",
      },
      {
        "__DimGroupID__": "north of east-B-profit",
        "__DimGroup__": "north of east-B",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "city": "B",
          "date": "2020",
          "profit": 30,
          "region": "north of east",
        },
        "city": "B",
        "date": "2020",
        "profit": 30,
        "region": "north of east",
      },
      {
        "__DimGroupID__": "north of east-C-profit",
        "__DimGroup__": "north of east-C",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "city": "C",
          "date": "2020",
          "profit": 30,
          "region": "north of east",
        },
        "city": "C",
        "date": "2020",
        "profit": 30,
        "region": "north of east",
      },
      {
        "__DimGroupID__": "north of east-D-profit",
        "__DimGroup__": "north of east-D",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "city": "D",
          "date": "2020",
          "profit": 50,
          "region": "north of east",
        },
        "city": "D",
        "date": "2020",
        "profit": 50,
        "region": "north of east",
      },
      {
        "__DimGroupID__": "north of east-E-profit",
        "__DimGroup__": "north of east-E",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "city": "E",
          "date": "2020",
          "profit": 40,
          "region": "north of east",
        },
        "city": "E",
        "date": "2020",
        "profit": 40,
        "region": "north of east",
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "formatMethod": [Function],
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__DimGroupID__",
  "stackCornerRadius": [
    4,
    4,
    4,
    4,
  ],
  "tooltip": {
    "dimension": {
      "content": [
        {
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "visible": true,
  },
  "type": "bar",
  "xField": [
    "date",
    "__DimGroupID__",
  ],
  "yField": "__MeaValue__",
}
`;
